# TrafficInspector

./: .env.example  .gitignore  .gitmodules  CMakeLists.txt  docker-compose.yaml  test-conf.ini
.github/codeql/: frontend-config.yaml
.github/workflows/: c.yaml  codeql.yaml  go.yaml  openapi.yaml  python.yaml  ui.yaml
api/schema/: openapi.html
backend/: Dockerfile  README.md  main.py  pyproject.toml
backend/api/: router.py
backend/api/v1/: router.py
backend/api/v1/flow/: router.py  schemas.py
backend/configs/: config.py
backend/migrations/: env.py
backend/migrations/versions/: f67e797dcd00_add_flow_info.py
backend/models/: models.py
backend/utils/: database.py  pagination.py
collector/: main.go
db/: flow_info.sql
src/core/: afpacket.c  config.c  config.h  dpi_worker.c  dpi_worker.h  flowd_worker.c  flowd_worker.h  main.c  message_queue.h  ndpi_workflow.c  ndpi_workflow.h  utils.c
ui/: .gitignore  package.json
ui/build-scripts/: build-plugins.js  dev.js
ui/src/features/closed/flow/views/table/: config.tsx  index.tsx
