[tool.poetry]
name = "trafficinspector"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
alembic = "^1.14.1"
asyncpg = "^0.30.0"
environs = "^14.1.1"
fastapi = "^0.115.8"
greenlet = "^3.1.1"
psycopg2 = "^2.9.10"
uvicorn = "^0.34.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
